--- a/photoGrid.html
+++ b/photoGrid.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Photo Blog</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="photos.css">
 </head>
 <body>
